--- a/o3o/MainWindow.xaml
+++ b/o3o/MainWindow.xaml
@@ -386,20 +386,29 @@
     <Grid>
        
         <!--<Image MouseEnter="reload_MouseEnter"  MouseLeave="reload_MouseLeave" MouseDown="reload_MouseDown" Name="reload" Height="16" Width="16" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,3,2,0" Focusable="False" Source="/o3o;component/Images/Reload_normal.png"/>-->
-        <Image MouseEnter="btn_right_MouseEnter" MouseLeave="btn_right_MouseLeave" MouseDown="btn_right_MouseDown"  Name="btn_right" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,0,0" Focusable="False" Source="/o3o;component/Images/rightarrow.png"/>
-        <Image MouseEnter="btn_Left_MouseEnter" MouseLeave="btn_Left_MouseLeave" MouseDown="btn_Left_MouseDown" Name="btn_Left" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,20,0" Source="/o3o;component/Images/leftarrow.png" />
+        <Image MouseUp="btn_right_MouseUp" MouseEnter="btn_right_MouseEnter" MouseLeave="btn_right_MouseLeave" MouseDown="btn_right_MouseDown"  Name="btn_right" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,0,0" Focusable="False" Source="/o3o;component/Images/rightarrow.png" Cursor="Hand" />
+        <Image MouseUp="btn_Left_MouseUp" MouseEnter="btn_Left_MouseEnter" MouseLeave="btn_Left_MouseLeave" MouseDown="btn_Left_MouseDown" Name="btn_Left" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,20,0" Source="/o3o;component/Images/leftarrow.png" Cursor="Hand" />
        
         <TabControl HorizontalAlignment="Stretch" Name="tabControl1" VerticalAlignment="Stretch" Height="{Binding ElementName=Scroller, Path=ViewportHeight}" Width="{Binding ElementName=Scroller, Path=ViewportWidth}" Background="#00000000" Padding="0" BorderBrush="#00000000">
             <TabItem Header="Home" Name="HomeTab" BorderBrush="#00000000" Padding="6,0">
-                <Grid Height="Auto">
+                <Grid>
                     <ListBox ScrollViewer.CanContentScroll="False"  Margin="0,0,0,70" Name="TweetElements" VerticalAlignment="Stretch" HorizontalContentAlignment="Left" Width="{Binding ElementName=Scroller, Path=ViewportWidth}" Background="#00000000" BorderBrush="#00000000" BorderThickness="0" SelectionMode="Extended" 
                              ScrollViewer.HorizontalScrollBarVisibility="Disabled" Style="{DynamicResource ListBoxStyle1}">
 
                     </ListBox>
-                    <TextBox Name="textBox1" VerticalAlignment="Bottom" HorizontalContentAlignment="Left" Width="{Binding ElementName=Scroller, Path=ViewportWidth}" Height="53" Margin="-1,0,1,17" TextChanged="textBox1_TextChanged" Background="#81FFFFFF" TextWrapping="Wrap" />
+                    <TextBox x:FieldModifier="public" Name="textBox1" KeyDown="textBox1_KeyDown" VerticalAlignment="Bottom" HorizontalContentAlignment="Left" Width="{Binding ElementName=Scroller, Path=ViewportWidth}" Height="53" Margin="-1,0,1,17" TextChanged="textBox1_TextChanged" Background="#50FFFFFF" TextWrapping="Wrap" >
+                    </TextBox>
                     
-                    <TextBlock Text="Tweet:" Height="18" HorizontalAlignment="Left" Margin="0,0,0,0" Name="TweetLbl" VerticalAlignment="Bottom" Padding="0" Width="35" Style="{StaticResource glassText}" />
-                    <TextBlock Text="140" Height="18" HorizontalAlignment="Left" Margin="35,0,0,0" Name="charleft" VerticalAlignment="Bottom" Padding="1" Width="35" FontSize="11" Style="{StaticResource glassText}"/>
+                    <TextBlock Text="Tweet:" Height="18" HorizontalAlignment="Left" Margin="0,0,0,0" Name="TweetLbl" VerticalAlignment="Bottom" Padding="0" Width="35" Foreground="Black">
+                    <TextBlock.Effect>
+                        <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                    </TextBlock.Effect>
+                    </TextBlock>
+                    <TextBlock Text="140" Height="18" HorizontalAlignment="Left" Margin="35,0,0,0" Name="charleft" VerticalAlignment="Bottom" Padding="1" Width="65" FontSize="11" Foreground="Black">
+                    <TextBlock.Effect>
+                        <DropShadowEffect ShadowDepth="0" BlurRadius="5" Color="White" Opacity="1" RenderingBias="Performance" />
+                    </TextBlock.Effect>
+                    </TextBlock>
                     <Button Content="send" Height="17" HorizontalAlignment="Center" Margin="76,0,79,0" Name="testbutton" VerticalAlignment="Bottom" Width="100" Click="testbutton_Click" Template="{DynamicResource GlassButton}" Foreground="White" />
                 </Grid>
             </TabItem>
